# terramantle-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs  cli.rs  commands.rs  confirm.rs  discovery.rs  lock.rs  main.rs  output.rs  state.rs
crates/terramantle/: Cargo.toml
crates/terramantle/src/: cli.rs  commands.rs  main.rs
crates/tm-api/: Cargo.toml
crates/tm-api/src/: client.rs  error.rs  lib.rs  models.rs  modules.rs  orgs.rs  providers.rs  state.rs  types.rs
crates/tm-auth/: Cargo.toml
crates/tm-auth/src/: discovery.rs  flows.rs  jwt.rs  lib.rs  mode.rs  store.rs
crates/tm-config/: Cargo.toml
crates/tm-config/src/: lib.rs
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
