[package]
name = "tm-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", features = ["json"] }
thiserror = { workspace = true }
