[package]
name = "tm-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tm-api = { path = "../tm-api" }
tm-config = { path = "../tm-config" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
keyring = "2"
