[package]
name = "tm-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = "3"
